update code for BIM  1-26-2022

--- a/My_C_Code/Scripts/BIM_SysID.ipynb
+++ b/My_C_Code/Scripts/BIM_SysID.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,17 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t> cabinet setup 60.00000\n",
-      "['cabinet setup 60.00000', 'SUCCESS']\n",
       "\t> cabinet init_cb\n",
-      "['cabinet init_cb', 'FAILURE']\n"
+      "['cabinet init_cb', 'SUCCESS']\n",
+      "\t> cabinet set_vdc_all 60.00000\n",
+      "['cabinet set_vdc_all 60.00000', 'SUCCESS']\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
       "\t> hw pwm off\n",
       "['hw pwm off', 'SUCCESS']\n",
       "\t> bim deinit\n",
-      "['bim deinitENC:\\tSetting pulses per rev bits = 10...', '', 'SUCCESS']\n"
+      "['bim deinit', 'SUCCESS']\n"
      ]
     }
    ],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
      "output_type": "stream",
      "text": [
       "\t> bim init\n",
-      "['bim initENC:\\tSetting pulses per rev bits = 10...', '', 'SUCCESS']\n"
+      "['bim init', 'SUCCESS']\n"
      ]
     }
    ],
@@ -101,29 +101,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t> bim set_vdc_tq 100.000000\n",
-      "['bim set_vdc_tq 100.000000', 'SUCCESS']\n",
-      "\t> bim set_vdc_s1 80.000000\n",
-      "['bim set_vdc_s1 80.000000', 'SUCCESS']\n",
+      "\t> bim set_vdc_tq 60.000000\n",
+      "['bim set_vdc_tq 60.000000', 'SUCCESS']\n",
+      "\t> bim set_vdc_s1 60.000000\n",
+      "['bim set_vdc_s1 60.000000', 'SUCCESS']\n",
       "\t> bim set_id 2.000000\n",
       "['bim set_id 2.000000', 'SUCCESS']\n",
       "\t> bim enable_ctrl\n",
       "['bim enable_ctrl', 'SUCCESS']\n",
       "\t> hw pwm on\n",
-      "['hw pwm on', 'FAILURE']\n"
+      "['hw pwm on', 'SUCCESS']\n"
      ]
     }
    ],
    "source": [
-    "cmd.bim_set_Vdc_tq(100)\n",
-    "cmd.bim_set_Vdc_s1(80)\n",
+    "cmd.bim_set_Vdc_tq(60)\n",
+    "cmd.bim_set_Vdc_s1(60)\n",
     "cmd.bim_set_id(2)\n",
     "#cmd.bim_set_Vdc(60)\n",
     "cmd.bim_enable_ctrl()\n",
@@ -132,14 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -151,11 +144,7 @@
       "\t> bim enable_vctrl\n",
       "['bim enable_vctrl', 'SUCCESS']\n",
       "\t> bim set_id 13.500000\n",
-      "['bim set_id 13.500000', 'SUCCESS']\n",
-      "\t> bim set_deltaxy 0.00000000 0.00000000\n",
-      "['bim set_deltaxy 0.00000000 0.00000000', 'SUCCESS']\n",
-      "\t> bim enable_levctrl\n",
-      "['bim enable_levctrl', 'SUCCESS']\n"
+      "['bim set_id 13.500000', 'SUCCESS']\n"
      ]
     }
    ],
@@ -164,7 +153,26 @@
     "cmd.bim_enable_vctrl()\n",
     "#logger.clear_all()\n",
     "#logger.start()\n",
-    "cmd.bim_set_id(13.5)\n",
+    "cmd.bim_set_id(13.5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t> bim set_deltaxy 0.00000000 0.00000000\n",
+      "['bim set_deltaxy 0.00000000 0.00000000', 'SUCCESS']\n",
+      "\t> bim enable_levctrl\n",
+      "['bim enable_levctrl', 'SUCCESS']\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "cmd.bim_set_deltaxy(0, 0)\n",
     "cmd.bim_enable_levctrl()\n",
@@ -177,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +197,6 @@
       "###################   AMDC LOGGER INFO   ###################\n",
       "\n",
       "Variable Name:      Index:         Type:         Sample Rate [Hz]:    Number of Samples:\n",
-      "LOG_theta_rm          0            double              1000.0              58680     \n",
       "\n",
       "\t> c_loop enable_log\n",
       "['c_loop enable_log', 'SUCCESS']\n"
@@ -217,22 +224,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t> log unreg 0\n",
-      "['log unreg 0', 'SUCCESS']\n",
-      "\t> log reg 0 LOG_theta_rm 1250584 500 double\n",
-      "['log reg 0 LOG_theta_rm 1250584 500 double', 'SUCCESS']\n",
+      "\t> log reg 0 LOG_delta_x 1272968 1000 double\n",
+      "['log reg 0 LOG_delta_x 1272968 1000 double', 'SUCCESS']\n",
+      "\t> log reg 1 LOG_delta_y 1272976 1000 double\n",
+      "['log reg 1 LOG_delta_y 1272976 1000 double', 'SUCCESS']\n",
+      "\t> log reg 2 LOG_F_x 1272984 1000 double\n",
+      "['log reg 2 LOG_F_x 1272984 1000 double', 'SUCCESS']\n",
+      "\t> log reg 3 LOG_F_y 1272992 1000 double\n",
+      "['log reg 3 LOG_F_y 1272992 1000 double', 'SUCCESS']\n",
+      "\t> log reg 4 LOG_Is1_x 1272624 1000 double\n",
+      "['log reg 4 LOG_Is1_x 1272624 1000 double', 'SUCCESS']\n",
+      "\t> log reg 5 LOG_Is1_y 1272632 1000 double\n",
+      "['log reg 5 LOG_Is1_y 1272632 1000 double', 'SUCCESS']\n",
+      "\t> log reg 6 LOG_Is1_x_ref 1272560 1000 double\n",
+      "['log reg 6 LOG_Is1_x_ref 1272560 1000 double', 'SUCCESS']\n",
+      "\t> log reg 7 LOG_Is1_y_ref 1272568 1000 double\n",
+      "['log reg 7 LOG_Is1_y_ref 1272568 1000 double', 'SUCCESS']\n",
+      "\t> log reg 8 LOG_Itq_d_ref 1272544 1000 double\n",
+      "['log reg 8 LOG_Itq_d_ref 1272544 1000 double', 'SUCCESS']\n",
+      "\t> log reg 9 LOG_Itq_q_ref 1272552 1000 double\n",
+      "['log reg 9 LOG_Itq_q_ref 1272552 1000 double', 'SUCCESS']\n",
+      "\t> log reg 10 LOG_Itq_d 1272608 1000 double\n",
+      "['log reg 10 LOG_Itq_d 1272608 1000 double', 'SUCCESS']\n",
+      "\t> log reg 11 LOG_Itq_q 1272616 1000 double\n",
+      "['log reg 11 LOG_Itq_q 1272616 1000 double', 'SUCCESS']\n",
+      "\t> log reg 12 LOG_va1_ref 1272784 1000 double\n",
+      "['log reg 12 LOG_va1_ref 1272784 1000 double', 'SUCCESS']\n",
+      "\t> log reg 13 LOG_vb1_ref 1272792 1000 double\n",
+      "['log reg 13 LOG_vb1_ref 1272792 1000 double', 'SUCCESS']\n",
+      "\t> log reg 14 LOG_vc1_ref 1272800 1000 double\n",
+      "['log reg 14 LOG_vc1_ref 1272800 1000 double', 'SUCCESS']\n",
+      "\t> log reg 15 LOG_va2_ref 1272808 1000 double\n",
+      "['log reg 15 LOG_va2_ref 1272808 1000 double', 'SUCCESS']\n",
+      "\t> log reg 16 LOG_vb2_ref 1272816 1000 double\n",
+      "['log reg 16 LOG_vb2_ref 1272816 1000 double', 'SUCCESS']\n",
+      "\t> log reg 17 LOG_vc2_ref 1272824 1000 double\n",
+      "['log reg 17 LOG_vc2_ref 1272824 1000 double', 'SUCCESS']\n",
       "\t> log info\n",
       "###################   AMDC LOGGER INFO   ###################\n",
       "\n",
       "Variable Name:      Index:         Type:         Sample Rate [Hz]:    Number of Samples:\n",
-      "LOG_theta_rm          0            double              500.0                 0       \n",
+      "LOG_delta_x           0            double              1000.0                0       \n",
+      "LOG_delta_y           1            double              1000.0                0       \n",
+      "LOG_F_x               2            double              1000.0                0       \n",
+      "LOG_F_y               3            double              1000.0                0       \n",
+      "LOG_Is1_x             4            double              1000.0                0       \n",
+      "LOG_Is1_y             5            double              1000.0                0       \n",
+      "LOG_Is1_x_ref         6            double              1000.0                0       \n",
+      "LOG_Is1_y_ref         7            double              1000.0                0       \n",
+      "LOG_Itq_d_ref         8            double              1000.0                0       \n",
+      "LOG_Itq_q_ref         9            double              1000.0                0       \n",
+      "LOG_Itq_d             10           double              1000.0                0       \n",
+      "LOG_Itq_q             11           double              1000.0                0       \n",
+      "LOG_va1_ref           12           double              1000.0                0       \n",
+      "LOG_vb1_ref           13           double              1000.0                0       \n",
+      "LOG_vc1_ref           14           double              1000.0                0       \n",
+      "LOG_va2_ref           15           double              1000.0                0       \n",
+      "LOG_vb2_ref           16           double              1000.0                0       \n",
+      "LOG_vc2_ref           17           double              1000.0                0       \n",
       "\n",
       "\t> log start\n",
       "['log start', 'SUCCESS']\n"
@@ -244,10 +300,10 @@
     "#logger.register('wrm_ref wrm wrm_hf Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q delta_x delta_y', samples_per_sec = 5000, var_type = 'double')\n",
     "#logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q wrm_ref wrm wrm_hf va1_ref vb1_ref vc1_ref', samples_per_sec = 10000, var_type = 'double')\n",
     "\n",
-    "#logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q va1_ref vb1_ref vc1_ref va2_ref vb2_ref vc2_ref', samples_per_sec = 1000, var_type = 'double')\n",
+    "logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q va1_ref vb1_ref vc1_ref va2_ref vb2_ref vc2_ref', samples_per_sec = 1000, var_type = 'double')\n",
     "#logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q wrm_ref wrm', samples_per_sec = 5000, var_type = 'double')\n",
     "#logger.register('delta_x delta_y F_x F_y' , samples_per_sec = 500, var_type = 'double')\n",
-    "logger.register('theta_rm' , samples_per_sec = 500, var_type = 'double')\n",
+    "#logger.register('theta_rm' , samples_per_sec = 500, var_type = 'double')\n",
     "# View which variables are logged\n",
     "logger.info()\n",
     "\n",
@@ -257,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -267,10 +323,112 @@
       "\t> log stop\n",
       "['log stop', 'SUCCESS']\n",
       "\t> log dump bin 0\n",
-      "Dumping: LOG_theta_rm\n",
-      "Dump took: 4.743  sec\n",
-      "Dump rate: 1881.652  sps\n",
-      "Num samples: 8924 \n",
+      "Dumping: LOG_delta_x\n",
+      "Dump took: 0.461  sec\n",
+      "Dump rate: 963.536  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 1\n",
+      "Dumping: LOG_delta_y\n",
+      "Dump took: 0.464  sec\n",
+      "Dump rate: 956.915  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 2\n",
+      "Dumping: LOG_F_x\n",
+      "Dump took: 0.475  sec\n",
+      "Dump rate: 934.339  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 3\n",
+      "Dumping: LOG_F_y\n",
+      "Dump took: 0.460  sec\n",
+      "Dump rate: 964.697  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 4\n",
+      "Dumping: LOG_Is1_x\n",
+      "Dump took: 0.481  sec\n",
+      "Dump rate: 922.641  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 5\n",
+      "Dumping: LOG_Is1_y\n",
+      "Dump took: 0.466  sec\n",
+      "Dump rate: 953.225  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 6\n",
+      "Dumping: LOG_Is1_x_ref\n",
+      "Dump took: 0.465  sec\n",
+      "Dump rate: 955.314  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 7\n",
+      "Dumping: LOG_Is1_y_ref\n",
+      "Dump took: 0.466  sec\n",
+      "Dump rate: 953.507  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 8\n",
+      "Dumping: LOG_Itq_d_ref\n",
+      "Dump took: 0.468  sec\n",
+      "Dump rate: 948.443  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 9\n",
+      "Dumping: LOG_Itq_q_ref\n",
+      "Dump took: 0.466  sec\n",
+      "Dump rate: 952.228  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 10\n",
+      "Dumping: LOG_Itq_d\n",
+      "Dump took: 0.463  sec\n",
+      "Dump rate: 959.453  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 11\n",
+      "Dumping: LOG_Itq_q\n",
+      "Dump took: 0.473  sec\n",
+      "Dump rate: 938.666  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 12\n",
+      "Dumping: LOG_va1_ref\n",
+      "Dump took: 0.419  sec\n",
+      "Dump rate: 1059.731  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 13\n",
+      "Dumping: LOG_vb1_ref\n",
+      "Dump took: 0.440  sec\n",
+      "Dump rate: 1009.046  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 14\n",
+      "Dumping: LOG_vc1_ref\n",
+      "Dump took: 0.476  sec\n",
+      "Dump rate: 933.665  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 15\n",
+      "Dumping: LOG_va2_ref\n",
+      "Dump took: 0.547  sec\n",
+      "Dump rate: 811.204  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 16\n",
+      "Dumping: LOG_vb2_ref\n",
+      "Dump took: 0.421  sec\n",
+      "Dump rate: 1055.601  sps\n",
+      "Num samples: 444 \n",
+      "\n",
+      "\t> log dump bin 17\n",
+      "Dumping: LOG_vc2_ref\n",
+      "Dump took: 0.468  sec\n",
+      "Dump rate: 948.032  sps\n",
+      "Num samples: 444 \n",
       "\n"
      ]
     }
@@ -284,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +464,7 @@
     }
    ],
    "source": [
-    "cmd.bim_set_w(000.0*PI/30)"
+    "cmd.bim_set_w(00.0*PI/30)"
    ]
   },
   {
@@ -315,8 +473,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 5e-7\n",
-    "cmd.bim_set_deltaxy(x, 0)"
+    "for x in [-35e-5, -30e-5, -25e-5, -20e-5, -15e-5, -10e-5, -5e-5, 0, 5e-5, 10e-5, 15e-5, 20e-5, 25e-5, 30e-5, 35e-5]:\n",
+    "    for y in [-35e-5, -30e-5, -25e-5, -20e-5, -15e-5, -10e-5, -5e-5, 0, 5e-5, 10e-5, 15e-5, 20e-5, 25e-5, 30e-5, 35e-5]:\n",
+    "        cmd.bim_set_deltaxy(x, 0)\n",
+    "        time.sleep(5)\n",
+    "        logger.clear_all()\n",
+    "        logger.start()\n",
+    "        #DATA IS BEING RECORDED\n",
+    "        time.sleep(0.1)\n",
+    "        logger.stop()\n",
+    "        filename = 'bim_data_standstill_x_'+ str(x)+'_y_'+str(y)+'.csv'\n",
+    "        data = logger.dump(file = filename)"
    ]
   },
   {
